packages/prop-house-webapp/src/components/ProfileHeader/ProfileHeader.module.css
.profileHeaderRow {
  margin-bottom: 2rem;
}

.profilePicCol img {
  height: 15rem;
  width: auto;
  border-radius: 30px !important;
}
.communityInfoCol {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.communityInfoCol > * {
  margin: 0.75rem 0;
}
.titleRow {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.titleRow .title {
  font-size: xx-large;
  font-weight: 700;
}
.titleRow .contractAddressPill {
  background-color: rgba(128, 128, 128, 0.1);
  font-weight: 500;
  padding: 0.5rem 0.8rem;
  border-radius: 15px;
  cursor: pointer;
}
.titleRow div:nth-child(2) {
  margin-left: 1rem;
}

.subInfoRow {
  display: flex;
  font-size: medium;
  color: var(--brand-gray);
}
.subInfoRow .funder {
  color: black;
  font-weight: 600;
}
.subInfoRow .spacer {
  margin: 0 1rem;
}
.subInfoRow div:nth-child(2) {
  margin-left: 1rem;
}
.copyIcon {
  margin-left: 5px;
  cursor: pointer;
}

.propHouseDataRow {
  display: flex;
}
.propHouseDataRow .item:nth-child(1) {
  margin-left: 0;
}
.propHouseDataRow > * {
  margin: 0 2rem;
}

.itemTitle {
  color: var(--brand-gray);
  font-size: medium;
}

.itemData {
  font-weight: bold;
  margin-top: 0.5rem;
  font-size: x-large;
}

@media (max-width: 992px) {
  .profilePicCol {
    text-align: center;
    margin-bottom: 2rem;
  }
  .communityInfoCol {
    margin: 0 1rem;
  }
}

